@@ -12,6 +12,7 @@ The following submitted code, packages or analysis, and deserve special thanks:
   Jörg Krause
   Ben Boeckel
   Paul J. Fenwick
+  Michael Neumann
 
 Thanks to the following, who submitted detailed bug reports and excellent suggestions:
 
