@@ -33,6 +33,8 @@ elseif (${CMAKE_SYSTEM_NAME} MATCHES "OpenBSD")
   set (OPENBSD true)
 elseif (${CMAKE_SYSTEM_NAME} MATCHES "NetBSD")
   set (NETBSD true)
+elseif (${CMAKE_SYSTEM_NAME} MATCHES "DragonFly")
+  set (DRAGONFLY true)
 elseif (${CMAKE_SYSTEM_NAME} MATCHES "SunOS")
   set (SOLARIS true)
 elseif (${CMAKE_SYSTEM_NAME} STREQUAL "GNU")
