@@ -3,6 +3,8 @@
 1.1.1 () -
 - TD-120  Missing cmakedefine for HAVE_GET_CURRENT_DIR_NAME
           (Thanks to Jörg Krause, Ben Boeckel).
+- TI-91   Timewarrior does not compile on DragonFly
+          (thanks to Michael Neumann).
 - TW-1845 Cygwin build fails, missing get_current_dir_name
           (thanks to hosaka).
 - TW-1936 Tweak tests to have fuller TAP compliance
